added css for style, fixed nav links

--- a/Index.html
+++ b/Index.html
@@ -13,17 +13,19 @@
                 <ul>
                     <li> <a href="https://github.com/marylfisher">GitHub</a> </li>
                     <li> <a href="#">Portfolio</a></li>
-                    <li> <a id="contact-me">Contact</a></li>
+                    <li> <a href="#contact-me">Contact</a></li>
                 </ul>
             </nav>
           </header>
           </section>
 
         <section class="content">
+          <br></br>
           <h1 class="header-1">My New Website</h1>
 
           <img src="./Assets/images/image-1.png" alt="placeholder image">
 
+          <br></br>
           <p>This is a mini project where I build my first mock portfolio.</p>
         </section>
 
@@ -45,7 +47,7 @@
         </section>
         </body>
 
-        <section id-="footer">
+        <section id="footer">
         <foot>@ 2024 Mary Fisher's Work</foot>
         </section>
 
